Added googleplus page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="navbar navbar-invers menu-wrap">
       <div class="navbar-header text-center">
-        <a class="navbar-brand logo-left" href="javascript:void(0)"><i class="mdi-image-timelapse"></i>MozillaMadurai</a>
+        <a class="navbar-brand logo-left" href="javascript:void(0)">MozillaMadurai</a>
       </div>
         <ul class="nav navbar-nav main-navigation">
           <li class="active"><a href="#home">Home</a></li>
@@ -339,9 +339,9 @@
 <center>
 
               <h3>Find us on</h3>
-              <a class="social" href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a class="social" href="https://www.facebook.com/pages/Mozilla-Madurai/761235140657783" target="_blank"><i class="fa fa-facebook"></i></a>
               <a class="social" href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-              <a class="social" href="#" target="_blank"><i class="fa fa-google-plus"></i></a>
+              <a class="social" href="https://plus.google.com/b/108243224866643393552/108243224866643393552/about" target="_blank"><i class="fa fa-google-plus"></i></a>
               </center>
           </div>
         </div>  
